syntax = "proto3";

option go_package = "nem/idl/gen";
option java_multiple_files = true;
option java_package = "github.com/nuzur/nem";
option java_outer_classname = "FieldTypeURLConfig";

package nem;



message FieldTypeURLConfig {  
    repeated string allow_domains = 1;
    repeated string exclude_domains = 2;
    bool https_required = 3;
    repeated string allowed_extensions = 4;    
}
